Fixes & error handling